// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader component when loading has errored renders the loaders error children 1`] = `
<div
  className="app-loader"
>
  <h2
    className="app-loader__message"
  >
    Error while loading
  </h2>
  <div
    className="app-loader__icon-container"
  />
</div>
`;

exports[`Loader component when loading is complete renders the loaders children 1`] = `
<p>
  Hello world.
</p>
`;

exports[`Loader component when loading is incomplete renders the loader 1`] = `
<div
  className="app-loader app-loader--is-loading"
>
  <h2
    className="app-loader__message"
  >
    Loading
  </h2>
  <div
    className="app-loader__icon-container"
  />
</div>
`;
